# llm-based-api-template

./: .env  .env.example  .gitignore  .justfile  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  docker-compose.yml  main.tf  pyproject.toml  service.template.yml
.github/workflows/: deploy.yml
app/: config.py  db.py  main.py  models.py  tests.py
app/api/: deps.py  main.py  routes.py
app/services/: llm_service.py
docs/: deployment.md
